# usage-overarch-halogen

./: .env.example  .gitignore  CLAUDE.md  DASHBOARD_QUICKSTART.md  QWEN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  tecnicas.md
.gemini/: settings.json
app/: database.py  main.py  price_collector.py
dashboard/: README.md  app.py
docker/: docker-compose.yml  init.sql
docker/mlruns/0/: meta.yaml
docs/: CHANGELOG.md  feature_engineering_guide.md  prediction_guide.md
scripts/: cleanup_old_predictions.py  enrich_historical_data.py  example_usage.py  install-mcp-servers.sh  predict_example.py  test_feature_engineering.py  train_h2o_model.py  train_model.py  train_trend_model.py
src/: __init__.py  main.py
src/core/: database.py
src/models/: database.py  schemas.py
src/services/: bitcoin_service.py  data_enricher.py  databricks.py  feature_engineer.py  h2o_prediction_service.py  prediction_collector.py  prediction_service.py  prediction_storage_service.py  price_collector.py  trend_prediction_service.py
src/utils/: logger.py  timezone.py
