[tool.poetry]
name = "usage-overarch-halogen"
version = "0.1.0"
description = "Bitcoin Price Tracking Application"
authors = ["Victor R Zambrano"]
readme = "README.md"
packages = [{include = "*", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.104.1"
uvicorn = "0.24.0"
sqlalchemy = "2.0.23"
psycopg2-binary = "^2.9.10"
asyncpg = "0.29.0"
requests = "2.31.0"
python-dotenv = "1.0.0"
pydantic = "2.5.0"
asyncio = "3.4.3"
aiohttp = "^3.12.12"
databricks-sql-connector = "4.0.3"
pyarrow = "^20.0.0"
pandas = "2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
