[tool.poetry]
name = "usage-overarch-halogen"
version = "0.1.0"
description = "Bitcoin Price Tracking Application"
authors = ["Victor R Zambrano"]
readme = "README.md"
packages = [{include = "*", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
psycopg2-binary = "^2.9.9"
pandas = "^2.2.2"
sqlalchemy = "^2.0.30"
python-dotenv = "^1.0.1"
mlflow = "^2.14.1"
boto3 = "^1.34.125"
scikit-learn = "^1.5.0"
numpy = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
